--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "electron": "^1.4.1",
     "electron-reload": "^1.1.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
